--- a/OrangeSQL/app/src/main/res/layout/activity_main.xml
+++ b/OrangeSQL/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Contact"
+        android:text="Add Employee"
         android:id="@+id/bAddContact"
         android:onClick="goToRegistrationActivity"/>
 
