--- a/OrangeSQL/app/src/main/res/layout/rowlayout.xml
+++ b/OrangeSQL/app/src/main/res/layout/rowlayout.xml
@@ -10,7 +10,7 @@
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvUserName"
+        android:id="@+id/tvEmployeeName"
         android:text="Here Name"
         android:gravity="center"
         android:layout_weight="1"/>
@@ -19,18 +19,26 @@
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvUserMob"
-        android:text="Here Mobile"
+        android:id="@+id/tvEmployeeSurname"
+        android:text="Here Surname"
         android:gravity="center"
         android:layout_weight="1"/>
     <TextView
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvUserEmail"
-        android:text="Here Email"
+        android:id="@+id/tvEmployeeGender"
+        android:text="Here Gender"
         android:gravity="center"
-        android:layout_weight="3"/>
+        android:layout_weight="1"/>
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvEmployeeBirthdate"
+        android:text="Here Birthdate"
+        android:gravity="center"
+        android:layout_weight="2"/>
 
 
 
